# 13f-db

./: .gitignore  README.md  app.py  cli.py  config.py  db.py  downloader.py  processor.py  pyproject.toml
templates/: base.html  filing.html  index.html  manager.html  security.html  security_holders.html  security_manager.html
