[project]
name = "13f-db"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "0xludics", email = "contact@ludics.xyz" }
]
dependencies = [
    "asyncio>=3.4.3",
    "aiohttp>=3.10.3",
    "polars>=1.4.1",
    "rich>=13.7.1",
    "typer>=0.12.3",
    "psycopg2>=2.9.9",
    "beautifulsoup4>=4.12.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
